--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "laravel-vite-plugin": "^1.0.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-google-recaptcha": "^3.1.0",
         "sode-extend-react": "^1.1.111"
     }
 }
