--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "jsencrypt": "^3.3.2",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.4",
+        "moment-timezone": "^0.5.45",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-google-recaptcha": "^3.1.0",
