--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@inertiajs/react": "^1.1.0",
         "@tippyjs/react": "^4.2.6",
+        "chart.js": "^4.4.3",
         "jsencrypt": "^3.3.2",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.4",
