--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-google-recaptcha": "^3.1.0",
-        "sode-extend-react": "^1.1.111"
+        "sode-extend-react": "^1.1.111",
+        "sweetalert2": "^11.11.1"
     }
 }
